--- a/index.html
+++ b/index.html
@@ -20,8 +20,21 @@
         <script src="Objects/GameObject.SpikedSphere.js"></script>
 
         <script src="index.js"></script>
+
+        <style>
+            * { 
+                margin: 0;
+                padding: 0;
+            }
+
+            #canvas {
+                width: 100vw;
+                height: 100vh;
+            }
+        </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 	<body onload="Init()">
-		<canvas id="canvas" width="600" height="600"></canvas>
+		<canvas id="canvas"></canvas>
 	</body>
 </html>
