everything to classes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="Objects/GameObject.NormalsTree.js"></script>
         <script src="Objects/GameObject.Tree.js"></script>
         <script src="Objects/GameObject.Cube.js"></script>
+        <script src="Objects/GameObject.AnimatedCube.js"></script>
         <script src="Objects/GameObject.Plane.js"></script>
         <script src="Objects/GameObject.TexturedAnimatedCube.js"></script>
         <script src="Objects/GameObject.Sphere.js"></script>
