Everything to classes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <script src="gl-matrix.js"></script>
         <script src="GameCamera.js"></script>
         <script src="Gamebox.js"></script>
-        
+
 		<script src="Materials/GameMaterial.js"></script>
         <script src="Materials/GameMaterial.Texture.js"></script>
         <script src="Materials/GameMaterial.Spike.js"></script>
@@ -23,7 +23,7 @@
         <script src="index.js"></script>
 
         <style>
-            * { 
+            * {
                 margin: 0;
                 padding: 0;
             }
@@ -34,6 +34,7 @@
             }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sandbox</title>
     </head>
 	<body onload="Init()">
 		<canvas id="canvas"></canvas>
